--- a/environment/before-fix/frontend-deploy-broken.yaml
+++ b/environment/before-fix/frontend-deploy-broken.yaml
@@ -47,16 +47,36 @@ spec:
         command: ["sh", "-c"]
         args:
           - |
-            echo "Starting frontend workload"
-            # still memory intensive but now allowed
-            while true; do
-              dd if=/dev/zero of=/dev/shm/fill bs=1M count=50
+            echo "Starting controlled memory eater..."
+
+            TARGET_MB=${TARGET_MB:-50}   # Total memory needed
+            STEP_MB=${STEP_MB:-5}        # Allocate per iteration
+            SLEEP=${SLEEP:-1}            # Delay between allocations
+
+            i=0
+            data=""
+
+            while [ $i -lt $TARGET_MB ]; do
+              chunk=$(dd if=/dev/zero bs=1M count=$STEP_MB 2>/dev/null)
+              data="$data$chunk"
+              i=$((i + STEP_MB))
+              echo "Allocated ${i}MB / ${TARGET_MB}MB"
+              sleep $SLEEP
             done
+
+            echo "Finished allocating memory. Sleeping..."
+            sleep infinity
         resources:
           requests:
-            memory: "20Mi"
+            memory: "20Mi"   # Low Request
           limits:
-            memory: "30Mi"
+            memory: "30Mi"  # Low Limit
         env:
         - name: BACKEND_URL
-          value: "http://backend-svc-wrong.default.svc.cluster.local"   # WRONG
+          value: "http://backend-svc-wrong.default.svc.cluster.local"  # WRONG
+        - name: TARGET_MB
+          value: "50"
+        - name: STEP_MB
+          value: "5"
+        - name: SLEEP
+          value: "1"
