--- a/troubleshooting/problem-2-service-dns/fix/frontend-deploy-fix.yaml
+++ b/troubleshooting/problem-2-service-dns/fix/frontend-deploy-fix.yaml
@@ -28,7 +28,7 @@ spec:
 
             echo "[2] DNS OK. Checking backend URL connectivity..."
 
-            if ! curl -f --max-time 2 http://backend-svc.default.svc.cluster.local; then
+            if ! curl -f --max-time 2 http://backend-svc.default.svc.cluster.local; then    # <----- Endpoint Fixed
               echo "Backend URL check failed (doesn't exist or incorrect name)."
               exit 1
             fi
@@ -40,16 +40,38 @@ spec:
         command: ["sh", "-c"]
         args:
           - |
-            echo "Starting frontend workload"
-            # still memory intensive but now allowed
-            while true; do
-              dd if=/dev/zero of=/dev/shm/fill bs=1M count=50
+            echo "Starting controlled memory eater..."
+
+            TARGET_MB=${TARGET_MB:-50}   # Total memory needed
+            STEP_MB=${STEP_MB:-5}        # Allocate per iteration
+            SLEEP=${SLEEP:-1}            # Delay between allocations
+
+            i=0
+            data=""
+
+            while [ $i -lt $TARGET_MB ]; do
+              chunk=$(dd if=/dev/zero bs=1M count=$STEP_MB 2>/dev/null)
+              data="$data$chunk"
+              i=$((i + STEP_MB))
+              echo "Allocated ${i}MB / ${TARGET_MB}MB"
+              sleep $SLEEP
             done
+
+            echo "Finished allocating memory. Sleeping..."
+            sleep infinity
         resources:
           requests:
-            memory: "128Mi"     # Increased from 20Mi
+            memory: "20Mi"
           limits:
-            memory: "256Mi"     # Increased from 30Mi
+            memory: "30Mi"
         env:
         - name: BACKEND_URL
-          value: "http://backend-svc.default.svc.cluster.local"
+          value: "http://backend-svc.default.svc.cluster.local" # <----- Endpoint Fixed
+        - name: TARGET_MB
+          value: "50"
+        - name: STEP_MB
+          value: "5"
+        - name: SLEEP
+          value: "1"
+          
+
